# llm-serving-autoscaler-environment

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  app_visual.py  baseline.py  client.py  conftest.py  dashboard.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  openenv_error.txt  pyproject.toml  pyrightconfig.json  requirements.txt  test_grader.py
.streamlit/: config.toml
server/: Dockerfile  __init__.py  app.py  gradio_ui.py  requirements.txt
server/static/: dashboard.html
src/: __init__.py  environment.py  grader.py
tests/: test_env.py  test_environment.py
