[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-serving-autoscaler-environment"
version = "1.0.0"
description = "OpenEnv-compatible RL environment simulating an AI request serving system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "openenv-core>=0.2.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "pytest>=8.0.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
server = "server.app:main"
